--- a/icm20948-official/CMakeLists.txt
+++ b/icm20948-official/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(icm20948 STATIC)
 
-target_sources(icm20948 PRIVATE ${CMAKE_CURRENT_LIST_DIR}/icm20948.cpp)
+target_sources(icm20948 PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ICM_20948_C.c)
 
 target_link_libraries(icm20948
     pico_stdlib
