--- a/icm20948-official/CMakeLists.txt
+++ b/icm20948-official/CMakeLists.txt
@@ -1,8 +1,6 @@
 add_library(icm20948 STATIC)
 
-target_sources(icm20948 PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ICM_20948.cpp)
-
-target_include_directories(icm20948 PUBLIC ${CMAKE_CURRENT_LIST_DIR}/util)
+target_sources(icm20948 PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ICM_20948.cpp ${CMAKE_CURRENT_LIST_DIR}/ICM_20948_C.c)
 
 target_link_libraries(icm20948
     pico_stdlib
