--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 pico_sdk_init()
 
-add_executable(autonomous-glider src/main.cpp src/icm20948.cpp)
+add_executable(autonomous-glider src/main.cpp src/icm20948.cpp src/pwmservo.cpp)
 
-target_link_libraries(autonomous-glider PRIVATE pico_stdlib hardware_i2c)
+target_link_libraries(autonomous-glider PRIVATE pico_stdlib hardware_i2c hardware_pwm)
 
 pico_enable_stdio_usb(autonomous-glider 1)
 pico_enable_stdio_uart(autonomous-glider 0)
