--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 pico_sdk_init()
 
-add_executable(autonomous-glider src/main.cpp src/icm20948.cpp src/pid.cpp src/pwmservo.cpp src/bmp280.c)
+add_executable(autonomous-glider src/main.cpp src/icm20948.cpp src/pid.cpp src/pwmservo.cpp src/bmp280.c src/bmp280_low_level.c)
 
 target_link_libraries(autonomous-glider PRIVATE pico_stdlib hardware_i2c hardware_pwm)
 
